--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -250,6 +250,7 @@ header {
 /* line 28, ../sass/screen.scss */
 img#logo {
   position: absolute;
+  width: 60px;
   top: 1em;
   left: 1em;
   -webkit-transition: all .25s ease-in;
@@ -257,7 +258,7 @@ img#logo {
   -o-transition: all .25s ease-in;
   transition: all .25s ease-in;
 }
-/* line 34, ../sass/screen.scss */
+/* line 35, ../sass/screen.scss */
 img#logo:hover {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -266,7 +267,7 @@ img#logo:hover {
   transform: rotate(180deg);
 }
 
-/* line 39, ../sass/screen.scss */
+/* line 40, ../sass/screen.scss */
 nav {
   font-size: 0.8em;
   line-height: 2em;
@@ -274,18 +275,18 @@ nav {
   border-bottom: 1px dashed #fa2900;
   margin-bottom: 1em;
 }
-/* line 44, ../sass/screen.scss */
+/* line 45, ../sass/screen.scss */
 nav ul li {
   display: inline-block;
   margin-right: 2em;
 }
-/* line 47, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 nav ul li:last-child {
   margin-right: 0;
 }
 
 /* Footer */
-/* line 55, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 footer {
   margin-top: 0.8em;
   padding-top: 1.2em;
@@ -298,14 +299,14 @@ footer {
   font-family: "freight-sans-pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #bfc5c2;
 }
-/* line 62, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 footer div {
   width: 66.10169%;
   float: left;
   margin-right: 1.69492%;
   display: inline;
 }
-/* line 64, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 footer div:last-child {
   width: 32.20339%;
   float: right;
@@ -314,7 +315,7 @@ footer div:last-child {
   display: inline;
   text-align: right;
 }
-/* line 69, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 footer span {
   display: block;
 }
@@ -322,16 +323,16 @@ footer span {
 /* --------------------------------------------------------------------
    Home Page
 -------------------------------------------------------------------- */
-/* line 79, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 section.home img {
   margin-bottom: 1em;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 article.hi {
   text-align: center;
 }
-/* line 85, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 article.hi h2 {
   font-style: italic;
 }
@@ -347,7 +348,7 @@ article.hi h2::after {
 /* --------------------------------------------------------------------
    Info Page
 -------------------------------------------------------------------- */
-/* line 95, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 .bio {
   width: 100%;
   float: right;
@@ -364,14 +365,14 @@ article.hi h2::after {
   border-top: 1px dashed #fa2900;
   margin: 1em auto 1em auto;
 }
-/* line 99, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 .bio h1, .bio h2 {
   display: block;
   width: 100%;
   color: #ecf0ee;
   text-shadow: #bfc5c2 0 -1px 0;
 }
-/* line 105, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .bio h2 {
   -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
@@ -379,39 +380,39 @@ article.hi h2::after {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 107, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 .bio h2 a {
   color: inherit;
 }
-/* line 110, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 .bio h2 a:hover {
   text-decoration: none;
 }
-/* line 115, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 .bio img.face {
   width: 11em;
 }
-/* line 118, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 .bio p {
   margin-top: 1.6em;
   text-align: left;
 }
 
-/* line 124, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 .recent-projects {
   margin-bottom: 1.6em;
 }
-/* line 125, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 .recent-projects h2 {
   text-align: center;
 }
-/* line 129, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 .recent-projects a {
   text-decoration: none;
   color: #333333;
 }
 
-/* line 135, ../sass/screen.scss */
+/* line 136, ../sass/screen.scss */
 .project {
   width: 49.15254%;
   float: left;
@@ -425,18 +426,18 @@ article.hi h2::after {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 137, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 .project:nth-child(odd) {
   float: right;
   margin-right: 0;
   #margin-left: -0.5em;
   display: inline;
 }
-/* line 141, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 .project:hover {
   opacity: 1;
 }
-/* line 144, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
 .project h4 {
   line-height: 1;
   margin-bottom: -0.45em;
@@ -445,7 +446,7 @@ article.hi h2::after {
 /* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
-/* line 154, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 article.coming-soon h1 {
   margin-bottom: 1.6em;
   text-align: center;
@@ -454,7 +455,7 @@ article.coming-soon h1 {
 }
 
 /* Icon Styling */
-/* line 163, ../sass/screen.scss */
+/* line 164, ../sass/screen.scss */
 [class^="ss-"]:hover:before, [class*=" ss-"]:hover:before {
   -webkit-transform: rotate(-15deg);
   -moz-transform: rotate(-15deg);
@@ -463,7 +464,7 @@ article.coming-soon h1 {
   transform: rotate(-15deg);
 }
 
-/* line 167, ../sass/screen.scss */
+/* line 168, ../sass/screen.scss */
 a.ss-write:before {
   margin-right: 0.25em;
   font-size: 0.75em;
@@ -490,30 +491,30 @@ a.ss-write:before {
 }
 /* < 875px */
 @media screen and (max-width: 875px) {
-  /* line 195, ../sass/screen.scss */
+  /* line 196, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 198, ../sass/screen.scss */
+  /* line 199, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 203, ../sass/screen.scss */
+  /* line 204, ../sass/screen.scss */
   h1 {
     font-size: 2.09524em;
     line-height: 1.54545em;
   }
 
-  /* line 204, ../sass/screen.scss */
+  /* line 205, ../sass/screen.scss */
   h2 {
     font-size: 1.2381em;
     line-height: 1.30769em;
   }
 
-  /* line 205, ../sass/screen.scss */
+  /* line 206, ../sass/screen.scss */
   .project {
     width: 100%;
     float: right;
@@ -524,7 +525,7 @@ a.ss-write:before {
     margin: 1.25em 0;
     text-align: center;
   }
-  /* line 211, ../sass/screen.scss */
+  /* line 212, ../sass/screen.scss */
   .project img {
     margin-top: -0.5em;
   }
@@ -537,7 +538,7 @@ a.ss-write:before {
     line-height: 1.5em;
   }
 
-  /* line 223, ../sass/screen.scss */
+  /* line 224, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
