--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -46,17 +46,25 @@ h4 { @include adjust-font-size-to(26px); font-family: $title; font-weight: 400;}
 .sub { @include adjust-font-size-to(18px); font-style: italic; }
 
 /* --------------------------------------------------------------------
-   Colors
+   Variables
 -------------------------------------------------------------------- */
+
+/* Colors */
 
 $primary: rgba(137, 253, 194, 1.0);    // teal
 $drk-primary: rgba(32, 51, 41, 1.0);   // dark teal
 $secondary: rgba(250, 41, 0, 1.0);     // red
 $mid-black: rgba(68, 68, 68, 1.0);     // #444
+$lt-black: #666;
 $grey: rgba(236, 240, 238, 1.0);       // light teal grey
 $grey-shdw: rgba(191, 197, 194, 1.0);  // dark teal grey
 $white: rgba(253, 253, 253, 1.0);      // #fdfdfd
 $black: rgba(51, 51, 51, 1.0);         // #333
+
+/* Measurements */
+
+$golden: 61.8033%;
+$golden-sm: 38.1967%;
 
 /* --------------------------------------------------------------------
    Mixins
