--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -54,7 +54,7 @@ nav {
 /* Footer */
 
 footer {
-  @include rhythm(0.5, 0.75, 1, 1);
+  @include rhythm(1, 0.75, 1, 1);
   @include adjust-font-size-to(18px);
   @include reset-baseline;
   border-top: 1px dashed $secondary;
@@ -85,7 +85,7 @@ article.hi {
   text-align: center;
   h2 {
     font-style: italic;
-    @include dash-tail(10em);
+    @include dash-tail($golden-sm);
   }
 }
 
@@ -149,11 +149,44 @@ article.hi {
 }
 
 /* --------------------------------------------------------------------
+   Writing
+-------------------------------------------------------------------- */
+
+/* Post */
+
+article.short.post {
+  @include trailer();
+}
+
+h1.post-title {
+  text-align: center;
+  color: $grey;
+  @include text-shadow($grey-shdw 0px -1px 0);
+}
+
+span.timestamp {
+  @extend .emote;
+  display: block;
+  text-align: center;
+  color: $lt-black;
+  @include adjust-font-size-to(24px);
+  @include dash-tail($golden-sm);
+}
+
+img.post-image {
+  @include leader(0.5);
+}
+
+div.post-content {
+  @include leader();
+}
+
+/* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
 
-article.coming-soon h1 {
-  @include trailer();
+h1.alpha {
+  @include trailer(0.5);
   text-align: center;
   color: $grey;
   @include text-shadow($grey-shdw 0px -1px 0);
