--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -117,7 +117,7 @@ h4 {
 }
 
 /* line 42, ../sass/_base.scss */
-.emote {
+.emote, span.timestamp {
   font-family: "adobe-garamond-pro", Georgia, serif;
   font-weight: 400;
   font-style: italic;
@@ -138,15 +138,17 @@ h4 {
 }
 
 /* --------------------------------------------------------------------
-   Colors
+   Variables
 -------------------------------------------------------------------- */
+/* Colors */
+/* Measurements */
 /* --------------------------------------------------------------------
    Mixins
 -------------------------------------------------------------------- */
 /* --------------------------------------------------------------------
    Global
 -------------------------------------------------------------------- */
-/* line 86, ../sass/_base.scss */
+/* line 94, ../sass/_base.scss */
 body {
   font-family: "adobe-garamond-pro", Georgia, serif;
   -webkit-font-smoothing: antialiased;
@@ -155,25 +157,25 @@ body {
   border-top: 0.3em solid #89fdc2;
 }
 
-/* line 94, ../sass/_base.scss */
+/* line 102, ../sass/_base.scss */
 p {
   color: #444444;
 }
-/* line 96, ../sass/_base.scss */
+/* line 104, ../sass/_base.scss */
 p a {
   color: #fa2900;
 }
-/* line 98, ../sass/_base.scss */
+/* line 106, ../sass/_base.scss */
 p a:hover {
   text-decoration: underline;
 }
 
-/* line 104, ../sass/_base.scss */
+/* line 112, ../sass/_base.scss */
 img, object {
   max-width: 100%;
 }
 
-/* line 108, ../sass/_base.scss */
+/* line 116, ../sass/_base.scss */
 a {
   color: #333333;
   text-decoration: none;
@@ -183,28 +185,28 @@ a {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 112, ../sass/_base.scss */
+/* line 120, ../sass/_base.scss */
 a:hover {
   color: #fa2900;
 }
 
-/* line 117, ../sass/_base.scss */
+/* line 125, ../sass/_base.scss */
 p {
   margin-bottom: 1.6em;
 }
 
-/* line 121, ../sass/_base.scss */
+/* line 129, ../sass/_base.scss */
 em {
   font-style: italic;
 }
 
-/* line 125, ../sass/_base.scss */
+/* line 133, ../sass/_base.scss */
 ::selection {
   background: #89fdc2;
   /* Safari */
 }
 
-/* line 128, ../sass/_base.scss */
+/* line 136, ../sass/_base.scss */
 ::-moz-selection {
   background: #89fdc2;
   /* Firefox */
@@ -288,7 +290,7 @@ nav ul li:last-child {
 /* Footer */
 /* line 56, ../sass/screen.scss */
 footer {
-  margin-top: 0.8em;
+  margin-top: 1.6em;
   padding-top: 1.2em;
   padding-bottom: 1.6em;
   margin-bottom: 1.6em;
@@ -336,11 +338,11 @@ article.hi {
 article.hi h2 {
   font-style: italic;
 }
-/* line 73, ../sass/_base.scss */
+/* line 81, ../sass/_base.scss */
 article.hi h2::after {
   content: ' ';
   display: block;
-  width: 10em;
+  width: 38.1967%;
   border-top: 1px dashed #fa2900;
   margin: 1em auto 1em auto;
 }
@@ -357,7 +359,7 @@ article.hi h2::after {
   display: inline;
   text-align: center;
 }
-/* line 73, ../sass/_base.scss */
+/* line 81, ../sass/_base.scss */
 .bio::after {
   content: ' ';
   display: block;
@@ -444,18 +446,61 @@ article.hi h2::after {
 }
 
 /* --------------------------------------------------------------------
+   Writing
+-------------------------------------------------------------------- */
+/* Post */
+/* line 157, ../sass/screen.scss */
+article.short.post {
+  margin-bottom: 1.6em;
+}
+
+/* line 161, ../sass/screen.scss */
+h1.post-title {
+  text-align: center;
+  color: #ecf0ee;
+  text-shadow: #bfc5c2 0px -1px 0;
+}
+
+/* line 167, ../sass/screen.scss */
+span.timestamp {
+  display: block;
+  text-align: center;
+  color: #666666;
+  font-size: 0.8em;
+  line-height: 2em;
+}
+/* line 81, ../sass/_base.scss */
+span.timestamp::after {
+  content: ' ';
+  display: block;
+  width: 38.1967%;
+  border-top: 1px dashed #fa2900;
+  margin: 1em auto 1em auto;
+}
+
+/* line 176, ../sass/screen.scss */
+img.post-image {
+  margin-top: 0.8em;
+}
+
+/* line 180, ../sass/screen.scss */
+div.post-content {
+  margin-top: 1.6em;
+}
+
+/* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
-/* line 155, ../sass/screen.scss */
-article.coming-soon h1 {
-  margin-bottom: 1.6em;
+/* line 188, ../sass/screen.scss */
+h1.alpha {
+  margin-bottom: 0.8em;
   text-align: center;
   color: #ecf0ee;
   text-shadow: #bfc5c2 0px -1px 0;
 }
 
 /* Icon Styling */
-/* line 164, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 [class^="ss-"]:hover:before, [class*=" ss-"]:hover:before {
   -webkit-transform: rotate(-15deg);
   -moz-transform: rotate(-15deg);
@@ -464,7 +509,7 @@ article.coming-soon h1 {
   transform: rotate(-15deg);
 }
 
-/* line 168, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 a.ss-write:before {
   margin-right: 0.25em;
   font-size: 0.75em;
@@ -491,30 +536,30 @@ a.ss-write:before {
 }
 /* < 875px */
 @media screen and (max-width: 875px) {
-  /* line 196, ../sass/screen.scss */
+  /* line 229, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 199, ../sass/screen.scss */
+  /* line 232, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 204, ../sass/screen.scss */
+  /* line 237, ../sass/screen.scss */
   h1 {
     font-size: 2.09524em;
     line-height: 1.54545em;
   }
 
-  /* line 205, ../sass/screen.scss */
+  /* line 238, ../sass/screen.scss */
   h2 {
     font-size: 1.2381em;
     line-height: 1.30769em;
   }
 
-  /* line 206, ../sass/screen.scss */
+  /* line 239, ../sass/screen.scss */
   .project {
     width: 100%;
     float: right;
@@ -525,7 +570,7 @@ a.ss-write:before {
     margin: 1.25em 0;
     text-align: center;
   }
-  /* line 212, ../sass/screen.scss */
+  /* line 245, ../sass/screen.scss */
   .project img {
     margin-top: -0.5em;
   }
@@ -538,7 +583,7 @@ a.ss-write:before {
     line-height: 1.5em;
   }
 
-  /* line 224, ../sass/screen.scss */
+  /* line 257, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
