Add individual post pages with Disqus comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <div class="container">
 <!-- Header -->   
       <header>
-        <a href="/" title="Home"><img src="images/mukelogo.png" alt="Mikey Wills Logo" id="logo"></a>
+        <a href="/" title="Home"><img src="/images/mukelogo.png" alt="Mikey Wills Logo" id="logo"></a>
 <!-- Nav -->   
         <nav>
           <ul>
