--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,32 @@
 ---
 layout: default
 ---
-<div class="inner">	
-	<article class="post">
-    <div class="timestamp"><a href="{{ page.url }}" title="{{ page.title }}"><h4>{{ page.date | date_to_string }}</h4></a></div>
-	  <h1 class="alpha"> {{ page.title }} </h1>
-	  {{ content }}
-	  <hr />
-	  <div id="disqus">
-	    <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/litanyagainstfear/embed.js"></script><noscript><a href="http://litanyagainstfear.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-	  </div>
-	</article>
-</div>
+<article class="full post">
+  <h1 class="post-title">
+  {{ page.title }}
+  </h1>
+  <span class="timestamp">{{ page.date | date_to_string }}</span>
+  {% if page.image != null %}
+    <img src="{{ page..image }}" class="post-image">
+  {% endif %}
+  <div class="post-content">
+    {{ content }}
+  </div>
+  <div id="disqus_thread"></div>
+<!-- Disqus Comments -->
+  <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname = 'mikeywills'; // required: replace example with your forum shortname
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        
+</article>
+
