--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -87,6 +87,22 @@ $golden-sm: 38.1967%;
   }
 }
 
+/* Clearfix (Use @extend .clearfix) */
+
+.clearfix {
+    zoom:1;
+    &:before, &:after {
+        content: "\0020";
+        display: block;
+        height: 0;
+        overflow: hidden;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
+
 /* --------------------------------------------------------------------
    Global
 -------------------------------------------------------------------- */
