--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -34,6 +34,10 @@ $longform: "adobe-garamond-pro", Georgia, serif;
 
 /* Sizing */
 
+h1, h2, h3, h4 {
+  margin-bottom: 0.5em;
+}
+
 h1 { @include adjust-font-size-to(75px); font-family: $title; font-weight: 900;}
 h2 { @include adjust-font-size-to(46px); font-family: $title; font-weight: 900;}
 h3 { @include adjust-font-size-to(36px); font-family: $title; font-weight: 900;}
@@ -52,6 +56,7 @@ h4 { @include adjust-font-size-to(26px); font-family: $title; font-weight: 400;}
 /* Colors */
 
 $primary: rgba(137, 253, 194, 1.0);    // teal
+$lt-primary: rgba(137, 253, 194, 0.3);    // teal at 30%
 $drk-primary: rgba(32, 51, 41, 1.0);   // dark teal
 $secondary: rgba(250, 41, 0, 1.0);     // red
 $mid-black: rgba(68, 68, 68, 1.0);     // #444
