--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -246,8 +246,17 @@ blockquote {
     p {
     color: $lt-black;
     font-style: italic;
-    padding-left: 1.5em;
+    padding: 0.25em 0 0.25em 1.5em;
   }
+}
+
+code {
+  @extend .clearfix;
+  display: block;
+  background: $lt-black;
+  color: $grey;
+  padding: 0.5em;
+  @include border-radius(5px);
 }
 
 /* Icon Styling */
